# grapher

./: .eslintrc.js  .gitignore  .npmignore  AGENTS.md  package-lock.json  package.json  readme.md  webpack.dev.config.cjs  webpack.dev.config.js  webpack.prod.config.cjs  webpack.prod.config.js  webpack.test.config.cjs
docs/: data_inputs.md
examples/: altitude_graph.js  altitude_graph.jsx  annotated_observable_graph.js  annotated_observable_graph.jsx  autoscaling_graph.js  autoscaling_graph.jsx  basic_annotations_graph.js  basic_annotations_graph.jsx  basic_multigrapher.js  basic_multigrapher.jsx  binary_format_graph.js  binary_format_graph.jsx  bool_graph.js  bool_graph.jsx  change_at_end_graph.js  change_at_end_graph.jsx  changing_axes_graph.js  changing_axes_graph.jsx  coloured_background_graph.js  coloured_background_graph.jsx  combined_tooltips_graph.js  combined_tooltips_graph.jsx  combined_tooltips_graph_2.jsx  custom_bounds_graph.js  custom_bounds_graph.jsx  custom_colors_graph.js  custom_colors_graph.jsx  custom_height_graph.js  custom_height_graph.jsx  custom_tooltips_graph.js  custom_tooltips_graph.jsx  cutoff_area_graph.jsx  cutoff_bar_graph.jsx  cutoff_custom_time_graph.jsx  cutoff_dynamic_bottom_area.jsx  cutoff_now_graph.jsx  cutoff_out_of_bounds_graph.jsx  cutoff_shadow_graph.jsx  cutoff_test_graph.js  cutoff_test_graph.jsx  (+171 more)
grapher_rb/: .gitignore  README.md  example.rb  grapher_rb.gemspec  package.json  (+2 more)
src/rust/: Cargo.toml
src/rust/pkg/: index.js
src/rust/src/: extract_vertices.rs  get_point_number.rs  lib.rs  selected_space_to_render_space.rs
(+106 files in other folders)
